--- a/q/274532.html
+++ b/q/274532.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>021</td><td>Kap</td><td>240801T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274613#274613">Elias M&</a></td></tr>
-<tr d-ix="1"><td>036</td><td>APL</td><td>240801T081931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274611#274611">Sohang C</a></td></tr>
+<tr d-ix="0"><td>nan</td><td></td><td>240801T081931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274611#274611">Sohang C</a></td></tr>
+<tr d-ix="1"><td>021</td><td>Kap</td><td>240801T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274613#274613">Elias M&</a></td></tr>
 <tr d-ix="2"><td>035</td><td>Ruby</td><td>240729T094539Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274550#274550">G B</a></td></tr>
 <tr d-ix="3"><td>043</td><td>PARI/GP</td><td>240801T020553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274607#274607">alephalp</a></td></tr>
 <tr d-ix="4"><td>011</td><td>M</td><td>240729T183151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274562#274562">caird co</a></td></tr>
@@ -40,15 +40,18 @@
 <tr d-ix="11"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
 <tr d-ix="12"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Kap: 21 characters</h2>
+<div id="pu0" class="pu"><p><strike>## APL, 36 bytes</strike></p>
+<p><strike>This is a function that takes <code>n</code> as input and outputs a pair of integers representing the numerator and denominator of the answer:</strike></p>
+<p><strike><code>{{⍺×⍵+⍵[2]0}/(⊂2 1),(⊢,1+2∘×)¨⍳⍵}</code></strike></p>
+<h2>APL, 32 bytes</h2>
+<p><strong>Updated Solution:</strong>: <code>⎕←{⍺×⍵+⍵[2]0}/(⊂2 1),(⊢,1++⍨)¨⍳⎕</code> - I converted from a function to stdin &amp; stdout, and used suggestion by <a href="https://codegolf.stackexchange.com/users/121128/akamayu">akamayu</a> (converted <code>2∘×</code> → <code>+⍨</code> to save a byte).</p>
+<p><a href="https://tio.run/##SyzI0U2pTMzJT////1Hf1EdtE6of9e46PP1R71ZtII42ijWo1dd41NVkpGCoqQNkLNIx1AbKrNA8tOJR72aglv//jQE" rel="nofollow noreferrer" title="APL (Dyalog Unicode) – Try It Online">Try it online!</a></p>
+<p>I'll try to shorten it by using more tacit style to remove named arguments - any suggestions are welcome 🙂.</p>
+</div>
+<div id="pu1" class="pu"><h2>Kap: 21 characters</h2>
 <pre><code>(1+)⍛×/⌽2,÷∘(1+2×)1+⍳
 </code></pre>
 <p>This function takes <code>n</code>, and returns a rational number. This takes advantage of the built-in support for rational numbers in Kap, where dividing integers always yields a rational. To convert the result to floating point, one can add <code>0.0</code> to the result.</p>
-</div>
-<div id="pu1" class="pu"><h2>APL, 36 bytes</h2>
-<p>This is a function that takes <code>n</code> as input and outputs a pair of integers representing the numerator and denominator of the answer:</p>
-<p><code>{{⍺×⍵+⍵[2]0}/(⊂2 1),(⊢,1+2∘×)¨⍳⍵}</code></p>
-<p>I'll try to shorten it by using more tacit style to remove named arguments - any suggestions are welcome 🙂.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>38</s> 35 bytes</h1>
 
