--- a/q/274596.html
+++ b/q/274596.html
@@ -26,13 +26,57 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>051</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
-<tr d-ix="1"><td>054</td><td>Charcoal</td><td>240801T084735Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274612#274612">Neil</a></td></tr>
-<tr d-ix="2"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
+<tr d-ix="0"><td>054</td><td>Charcoal</td><td>240801T084735Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274612#274612">Neil</a></td></tr>
+<tr d-ix="1"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
+<tr d-ix="2"><td>051</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
 <tr d-ix="3"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
 <tr d-ix="4"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>78</s> <s>60</s> 51 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 54 bytes</h1>
+<pre><code>¹ＦＥＥ⪫⪪Ｓae¦a℅﹪℅↧ι¹³²⁻№]aouvι№eiι«Ｆ∧ι∧№υ⁰№υ±ι⎚Ｆ↔ι≔⟦⟧υ⊞υι
+</code></pre>
+<p><a href="https://tio.run/##PU9BasMwEDw3rxA@rUGFpj32FHxKqZNAjiWHja3aC0JrJG16KH1M39KHqZJcKlgNszszKw0z@oHRpnTy5CJs2@fNO3sFPS61XpgcnBdLEfZukXiOWTdBq1WDpqlQ7i7n4BCNh55HsQxHP5JDC6/8YfyAwQC1Wbd9emwL9uQkQMeSdzYXZLk1WlEJWluGKs9HfW7u6ot2bgTSqsAqEq0e/h2ZHMyEse4pts4a9JC/8@e@BrayjtUuBJocvF20kqI4SZhLAmXyldLVG4qz/flO9zf7Cw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> for valid, nothing if not. Explanation:</p>
+<pre><code>¹
+</code></pre>
+<p>Assume the word is valid.</p>
+<pre><code>ＦＥＥ⪫⪪Ｓae¦a℅﹪℅↧ι¹³²⁻№]aouvι№eiι«
+</code></pre>
+<p>Replace <code>ae</code> in the input with <code>a</code>, then for each letter, lowercase it, then reduce its ordinal modulo <code>132</code>, which converts <code>á</code> to <code>]</code>, <code>ú</code> to <code>v</code> (which fortunately isn't a valid input) and the other accented letters to their base letter, then finally determine whether it's a broad vowel (mapped to <code>1</code>), a slender vowel (mapped to <code>-1</code>) or a consonant (mapped to <code>0</code>). Loop over the resulting list of letter types.</p>
+<pre><code>Ｆ∧ι∧№υ⁰№υ±ι⎚
+</code></pre>
+<p>If this is a vowel, the previous vowel was the other type of vowel, and there was an intervening consonant, then clear the canvas, marking the word as invalid.</p>
+<pre><code>Ｆ↔ι≔⟦⟧υ
+</code></pre>
+<p>If this is a vowel then clear any saved letter types.</p>
+<pre><code>⊞υι
+</code></pre>
+<p>Save the type of this letter.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
+<pre><code>ae|[aáoóuú]
+#@
+[eéií]
+@#
+i)1`(#|@)\w+\1
+</code></pre>
+<p><a href="https://tio.run/##LY2xjsIwEET7@Y0ICUTFHwSk0@m@AZCYJIttydiSY0TDz7hMQUVHux@Wc07X7O7MvtEkyS5wXq2/LzPleaSWqO@7fs5oWhxFJ6evM9oGbrO7rJtnuzk9tqfdPA/ClK0Wl4S9JW4cEhHuVWQtAYbRZ6IXhsCRLlvBGLTcbDVw1Xc9XIKn5OpUstOJCQdhjbkgsPu4rI7eIycRGGMq/vWP93EQE/0Vgyw99G6sj@iwP/yAYZSILkmt9VpAnfoILfI3F/EL" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Outputs an inverted result, i.e. <code>0</code> for valid, <code>1</code> for invalid. Explanation:</p>
+<pre><code>i)`
+</code></pre>
+<p>Run the whole script case-insensitively.</p>
+<pre><code>ae|[aáoóuú]
+#@
+</code></pre>
+<p>Mark broad vowels with <code>#@</code>.</p>
+<pre><code>[eéií]
+@#
+</code></pre>
+<p>Mark slender vowels with <code>@#</code>.</p>
+<pre><code>1`(#|@)\w+\1
+</code></pre>
+<p>Check for consonants surrounded by vowels of different types (which equates to having surrounding symbols of the same type).</p>
+<p>Note that Retina defaults to the ISO-8859-1 code page so all of the Irish vowels only cost one byte.</p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>78</s> <s>60</s> 51 bytes</h1>
 <pre><code>(ma.*pPX&quot;[ei][^aeiou]+[aou]&quot;~&lt;rv)&lt;rmD&lt;&lt;skX&quot;ae_&quot;&lt;mtL
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=ZY-9TsMwFEb3PMWVl7SFsCExpEyMCGVgqBSV6tLcxFbtuDgOlIUXYWkHhDowdWONxMzat6nz0waJ5drn-H6f5PdPjsWCpFzvf4RaamPhqUQpUkEJRIZkmZDXPUReEMCdtqBzQKvhlWxt7jlBqqXULyLPwO1KUpRbtELnBaAhKGrZVHrIfRjDwM3R9dAz6gb8alMrH_0Otw3SEb8aFEfcNaiP-N1g2eLK3VcfpU2Dq_1lOh4ovBgtowmLSUzjByShy-lZjG6yt9A8D0MXCsNiMWFIMxYqe9uFfxWK3JUl2gNQMxgsDYSQDh0BxMAkoeWYs4bPgSWExvJqIwzhnOPJS6R6z_YmrXaKozAn8Vhtsacsy5jXt8o_SUPCcllt-uQ_g9V2rnsiUh1N23-t1-15AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -54,50 +98,6 @@
 <li>This regex reminds me of the regex used <a href="https://codegolf.stackexchange.com/a/270277/56656">here</a>. There might be a way to systematize this a bit to save bytes.</li>
 <li>Just has <code>xay</code> has a string version there should be a string version of <code>nxy</code>.</li>
 </ul>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 54 bytes</h1>
-<pre><code>¹ＦＥＥ⪫⪪Ｓae¦a℅﹪℅↧ι¹³²⁻№]aoι№eiuvι«Ｆ∧ι∧№υ⁰№υ±ι⎚Ｆ↔ι≔⟦⟧υ⊞υι
-</code></pre>
-<p><a href="https://tio.run/##PU/BasMwDD2vX2FyUsCDdTvuVHLqWNpCj6MHNfESgbGCbXWHsY/Zt@zDPNsZE1gPSe89WcOMfmC0KZ08uQjb9nnzzl5Bj0t9L0wOzoulCHu3SDzHzJug1apB01Qoucs@OETjoedRLMPRj@TQwit/GD9gMEBt5m2fHtuCPTkJ0LHknc0FudGKis3aMCS32smhPjd39Uc7NwJpVWCliVYP/5pcHMyEse4pss4a9JDP@VNfA1tZx2oXAk0O3i5aSWGcJMzFgXLxldLVG4qz/flO9zf7Cw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> for valid, nothing if not. Explanation:</p>
-<pre><code>¹
-</code></pre>
-<p>Assume the word is valid.</p>
-<pre><code>ＦＥＥ⪫⪪Ｓae¦a℅﹪℅↧ι¹³²⁻№]aoι№eiuvι«
-</code></pre>
-<p>Replace <code>ae</code> in the input with <code>a</code>, then for each letter, lowercase it, then reduce its ordinal modulo <code>132</code>, which converts <code>á</code> to <code>]</code>, <code>ú</code> to <code>v</code> (which fortunately isn't a valid input) and the other accented letters to their base letter, then finally determine whether it's a broad vowel (mapped to <code>1</code>), a slender vowel (mapped to <code>-1</code>) or a consonant (mapped to <code>0</code>). Loop over the resulting list of letter types.</p>
-<pre><code>Ｆ∧ι∧№υ⁰№υ±ι⎚
-</code></pre>
-<p>If this is a vowel, the previous vowel was the other type of vowel, and there was an intervening consonant, then clear the canvas, marking the word as invalid.</p>
-<pre><code>Ｆ↔ι≔⟦⟧υ
-</code></pre>
-<p>If this is a vowel then clear any saved letter types.</p>
-<pre><code>⊞υι
-</code></pre>
-<p>Save the type of this letter.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
-<pre><code>ae|[aáoó]
-#@
-[eéiíuú]
-@#
-i)1`(#|@)\w+\1
-</code></pre>
-<p><a href="https://tio.run/##LY2xjsIwEET7@Y0ICUTFHwSk0@m@AZCYJIttydiSY0TDz7hMQUVHux@Wc07X7O7MvtEkyS5wXq2/LzPleaSWqO8zmhZH0cnp666fM9oGbrO7rJtnuzk9tqfdPA/ClK0Wl4S9JW4cEhHuVWQtAYbRZ6IXhsCRLlvBGLTcbDVw1Xc9XIKn5OpUstOJCQdhjbkgsPu4rI7eIycRGGMq/vWP93EQE/0Vgyw99G6sj@iwP/yAYZSILkmt9VpAnfoILfI3F/EL" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test cases. Outputs an inverted result, i.e. <code>0</code> for valid, <code>1</code> for invalid. Explanation:</p>
-<pre><code>i)`
-</code></pre>
-<p>Run the whole script case-insensitively.</p>
-<pre><code>ae|[aáoó]
-#@
-</code></pre>
-<p>Mark broad vowels with <code>#@</code>.</p>
-<pre><code>[eéiíuú]
-@#
-</code></pre>
-<p>Mark slender vowels with <code>@#</code>.</p>
-<pre><code>1`(#|@)\w+\1
-</code></pre>
-<p>Check for consonants surrounded by vowels of different types (which equates to having surrounding symbols of the same type).</p>
-<p>Note that Retina defaults to the ISO-8859-1 code page so all of the Irish vowels only cost one byte.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
 <p>Inverted truthy and falsey.</p>
