--- a/q/245318.html
+++ b/q/245318.html
@@ -26,14 +26,14 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>089</td><td>Actionscript 3</td><td>240321T092453Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272009#272009">int 21h </a></td></tr>
-<tr d-ix="1"><td>034</td><td>UiuaSBCS</td><td>240730T163135Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274578#274578">Europe20</a></td></tr>
-<tr d-ix="2"><td>074</td><td>JavaScript Node.js</td><td>240730T194718Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274580#274580">Andrew B</a></td></tr>
-<tr d-ix="3"><td>047</td><td>Octave</td><td>221005T003733Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/252590#252590">south</a></td></tr>
-<tr d-ix="4"><td>152</td><td>Python 3</td><td>240415T193410Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272610#272610">cnln</a></td></tr>
-<tr d-ix="5"><td>110</td><td>JSL JMP Scripting Language</td><td>240415T161444Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272604#272604">int 21h </a></td></tr>
-<tr d-ix="6"><td>151</td><td>SVG  Scalable Vector Graphics.</td><td>240321T162957Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272015#272015">vengy</a></td></tr>
-<tr d-ix="7"><td>034</td><td>Uiua</td><td>240321T190942Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272019#272019">Joao-3</a></td></tr>
+<tr d-ix="0"><td>036</td><td>Uiua</td><td>240321T190942Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272019#272019">Joao-3</a></td></tr>
+<tr d-ix="1"><td>089</td><td>Actionscript 3</td><td>240321T092453Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272009#272009">int 21h </a></td></tr>
+<tr d-ix="2"><td>034</td><td>UiuaSBCS</td><td>240730T163135Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274578#274578">Europe20</a></td></tr>
+<tr d-ix="3"><td>074</td><td>JavaScript Node.js</td><td>240730T194718Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/274580#274580">Andrew B</a></td></tr>
+<tr d-ix="4"><td>047</td><td>Octave</td><td>221005T003733Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/252590#252590">south</a></td></tr>
+<tr d-ix="5"><td>152</td><td>Python 3</td><td>240415T193410Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272610#272610">cnln</a></td></tr>
+<tr d-ix="6"><td>110</td><td>JSL JMP Scripting Language</td><td>240415T161444Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272604#272604">int 21h </a></td></tr>
+<tr d-ix="7"><td>151</td><td>SVG  Scalable Vector Graphics.</td><td>240321T162957Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/272015#272015">vengy</a></td></tr>
 <tr d-ix="8"><td>066</td><td>Excel VBA</td><td>220320T011331Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245343#245343">Taylor R</a></td></tr>
 <tr d-ix="9"><td>033</td><td>J + viewmat</td><td>221004T221236Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/252585#252585">south</a></td></tr>
 <tr d-ix="10"><td>005</td><td>Prism v0.2a</td><td>230910T163106Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/265086#265086">kevidryo</a></td></tr>
@@ -113,7 +113,19 @@
 <tr d-ix="84"><td>056</td><td>QBasic</td><td>220319T151557Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245326#245326">DLosc</a></td></tr>
 <tr d-ix="85"><td>084</td><td>Coding</td><td>220319T144705Z</td><td><a href="https://codegolf.stackexchange.com/questions/245318/draw-the-ukrainian-flag/245323#245323">Razetime</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Actionscript 3, <s>94</s> 89 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 36 bytes</h1>
+<pre><code>&amp;ims÷255⊂∩(↯26↯78)0_87_183 255_215_0
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_10_0-dev_1__Jmltc8O3MjU14oqC4oipKOKGrzI2Xzc4XzMpMF84N18xODMgMjU1XzIxNV8wCg==" rel="nofollow noreferrer">Try it in the pad!</a></p>
+<h2>Explanation</h2>
+<p><code>0_87_183 255_215_0</code>: Push the RGB values on the stack</p>
+<p><code>∩(…)</code>: Apply this function to both values:</p>
+<ul>
+<li><code>↯26↯78</code>: Reshape them so they become stripes</li>
+</ul>
+<p><code>&amp;ims÷255⊂</code>: Join them together and divide by 255, then show as an image</p>
+</div>
+<div id="pu1" class="pu"><h1>Actionscript 3, <s>94</s> 89 bytes</h1>
 <p>Here comes our national flag in Actionscript and this is my first submission in this language, since my usual languages have been already taken. The code throws an error, but it will compile a SWF (<em>a &quot;swiff&quot;</em>) anyway. I took the inspiration from a similar answer to <a href="https://codegolf.stackexchange.com/questions/64140/draw-the-national-flag-of-france">another challenge</a>.</p>
 <ul>
 <li>spared 5 bytes by replacing hexadecimal <code>0xe0057B7</code> for <code>22455</code> and <code>0xeffd700</code> for <code>16766720</code>.</li>
@@ -125,7 +137,7 @@ f(16766720);r(0,33,99,33)
 <p><a href="https://i.sstatic.net/2ROfk.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/2ROfk.png" alt="Flag 66 x 99 px" /></a></p>
 <p><strong>Glory to Ukraine!</strong></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.uiua.org/" rel="noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="noreferrer">SBCS</a></sup>, <s>31</s> 34 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.uiua.org/" rel="noreferrer">Uiua</a><sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="noreferrer">SBCS</a></sup>, <s>31</s> 34 bytes</h1>
 <pre><code>&amp;ims≡↯78▽26÷255⊟0_87_183 255_215_0
 </code></pre>
 <p><a href="https://www.uiua.org/pad?src=0_12_0-dev_3__Jmltc-KJoeKGrzc44pa9MjbDtzI1NeKKnzBfODdfMTgzIDI1NV8yMTVfMAo=" rel="noreferrer">Try it here!</a></p>
@@ -138,7 +150,7 @@ f(16766720);r(0,33,99,33)
 &amp;ims                                display image to work on terminals
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 76 </s> 74 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, <s> 76 </s> 74 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(i=o=[];i&lt;2400;i++)o+=i%60?[...'🟦🟨'][i/1200|0]:`
 `;console.log(o)
@@ -146,7 +158,7 @@ f(16766720);r(0,33,99,33)
 <p><a href="https://tio.run/##y0osSyxOLsosKNHNy09J/f8/Lb9II9M23zY61jrTxsjEwMA6U1tbM1/bNlPVzMA@Wk9PT/3D/PnLgHiFemx0pr6hkYFBjUGsVQJXgnVyfl5xfk6qXk5@uka@5v//AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p><a href="https://i.sstatic.net/crLPmcgY.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/crLPmcgY.png" alt="flag" /></a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://octave.org/" rel="nofollow noreferrer">Octave</a>, <s>55</s> 47 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://octave.org/" rel="nofollow noreferrer">Octave</a>, <s>55</s> 47 bytes</h1>
 <pre><code>imagesc([5 5 5;4 4 4],[3,5])
 colormap(prism(5))
 </code></pre>
@@ -154,7 +166,7 @@ colormap(prism(5))
 <p>My first time posting in Octave! There might be a way to display without having to use <code>climits</code>, or maybe even without changing the default colormap, but I have not found it yet.</p>
 <p>Credits to <a href="https://codegolf.stackexchange.com/users/122638/cnln">cnln</a> for the save!</p>
 </div>
-<div id="pu4" class="pu"><h1>Python 3, 152 bytes</h1>
+<div id="pu5" class="pu"><h1>Python 3, 152 bytes</h1>
 <p>A repurposing of <a href="https://codegolf.stackexchange.com/a/272582/122638">my answer to the Pride flag challenge</a>, with some small improvements to the visuals.</p>
 <pre><code>from curses import*
 s=initscr();start_color();y=1
@@ -162,27 +174,15 @@ for x in[12,11,0]:w=newwin(13,78,~-y*13,0);init_pair(y,1,x);w.bkgd(' ',color_pai
 </code></pre>
 <p><a href="https://i.sstatic.net/PLHSH.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/PLHSH.png" alt="The flag of Ukraine, in a terminal window" /></a></p>
 </div>
-<div id="pu5" class="pu"><h1>JSL (JMP Scripting Language), 110 bytes</h1>
+<div id="pu6" class="pu"><h1>JSL (JMP Scripting Language), 110 bytes</h1>
 <pre><code>NewWindow(&quot;&quot;,Graph(FillColor({1,43/51,0});Rect(0,33,99,66,1);FillColor({0,29/85,183/255});Rect(0,66,99,99,1)))
 </code></pre>
 <p><a href="https://i.sstatic.net/XqK26.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/XqK26.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu6" class="pu"><h1>SVG - <a href="https://en.wikipedia.org/wiki/SVG" rel="nofollow noreferrer">Scalable Vector Graphics</a>. 151 bytes</h1>
+<div id="pu7" class="pu"><h1>SVG - <a href="https://en.wikipedia.org/wiki/SVG" rel="nofollow noreferrer">Scalable Vector Graphics</a>. 151 bytes</h1>
 <pre><code>&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 3 2&quot;&gt;&lt;path d=&quot;M0 0H3V1H0ZM0 1H3V2H0Z&quot; fill=&quot;#005BBB&quot;/&gt;&lt;path d=&quot;M0 1H3V2H0Z&quot; fill=&quot;#FFD500&quot;/&gt;&lt;/svg&gt;
 </code></pre>
 <p><a href="https://svgur.com/i/14cD.svg" rel="nofollow noreferrer">Try it online</a></p>
-</div>
-<div id="pu7" class="pu"><h1><a href="https://uiua.org" rel="noreferrer">Uiua</a>, 34 bytes</h1>
-<pre><code>&amp;ims÷255⊂∩(↯26_78_3)0_87_183 255_215_0
-</code></pre>
-<p><a href="https://uiua.org/pad?src=0_10_0-dev_1__Jmltc8O3MjU14oqC4oipKOKGrzI2Xzc4XzMpMF84N18xODMgMjU1XzIxNV8wCg==" rel="noreferrer">Try it in the pad!</a></p>
-<h2>Explanation</h2>
-<p><code>0_87_183 255_215_0</code>: Push the RGB values on the stack</p>
-<p><code>∩(…)</code>: Apply this function to both values:</p>
-<ul>
-<li><code>↯26_78_3</code>: Reshape them so they become stripes</li>
-</ul>
-<p><code>&amp;ims÷255⊂</code>: Join them together and divide by 255, then show as an image</p>
 </div>
 <div id="pu8" class="pu"><h1>Excel VBA, <sub><s>84</s></sub> 66 Bytes</h1>
  
