--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240801T133351Z
+"   /golfscore                                      20240801T145254Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/59436.html">Create output twice the length of the code      : 0059436</a>
 <a href="q/245318.html">Draw the Ukrainian Flag                         : 0245318</a>
 <a href="q/274596.html">Is this a valid Irish word?                     : 0274596</a>
 <a href="q/85.html">Fibonacci function or sequence                  : 0000085</a>
