--- a/q/274225.html
+++ b/q/274225.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>Uiua + experimentals</td><td>240730T002210Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274568#274568">noodle p</a></td></tr>
-<tr d-ix="1"><td>191</td><td>Setanta</td><td>240720T212816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274300#274300">bb94</a></td></tr>
-<tr d-ix="2"><td>031</td><td>J</td><td>240720T055517Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274290#274290">noodle p</a></td></tr>
+<tr d-ix="0"><td>030</td><td>J</td><td>240720T055517Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274290#274290">noodle p</a></td></tr>
+<tr d-ix="1"><td>019</td><td>Uiua + experimentals</td><td>240730T002210Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274568#274568">noodle p</a></td></tr>
+<tr d-ix="2"><td>191</td><td>Setanta</td><td>240720T212816Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274300#274300">bb94</a></td></tr>
 <tr d-ix="3"><td>093</td><td>Python 3</td><td>240718T071207Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274237#274237">Jitse</a></td></tr>
 <tr d-ix="4"><td>099</td><td>JavaScript ES6</td><td>240718T064538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274234#274234">Arnauld</a></td></tr>
 <tr d-ix="5"><td>104</td><td>R</td><td>240718T151236Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274247#274247">Dominic </a></td></tr>
@@ -43,7 +43,25 @@
 <tr d-ix="14"><td>055</td><td>Factor + math.combinatorics</td><td>240718T020251Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274227#274227">chunes</a></td></tr>
 <tr d-ix="15"><td>006</td><td>Vyxal</td><td>240718T013914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274225/reorder-for-smallest-largest-prefix-sum/274226#274226">emanresu</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Uiua + experimentals, 19 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>37</s> <s>31</s> 30 bytes</h1>
+<pre><code>0{[:{{y/:&gt;./|+/\|:y}}i.@!@#A.]
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmuxz6A62qq6ulLfyk5Pv0ZbP6bGqrK2NlPPQdFB2VEvFqLopqEmV2pyRr5CmkK8qUK8iYKhgpGCMVzIQsEEzrZUMFGwVIg3g2hcsABCAwA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<pre><code>i.@!@#A.] NB. get the permutations:
+i.        NB. the range to
+  @!      NB. the factorial of
+    @#    NB. the length of the argument
+      A.] NB. select those permutations of the argument
+
+0{[:{{y/:&gt;./|+/\|:y}} NB. reorder for smallest largest prefix sum:
+0{[:                  NB. first of
+    {{y/:       |:y}} NB. sorting those by each's
+         &gt;./          NB. maximum
+            |         NB. absolute
+             +/\      NB. prefix sum
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>Uiua + experimentals, 19 bytes</h1>
 <pre><code>⊡⊢⍏/↥⌵\+⍉.permute⧻.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_3__IyBFeHBlcmltZW50YWwhCkYg4oaQIOKKoeKKouKNjy_ihqXijLVcK-KNiS5wZXJtdXRl4qe7LgoKRiBbwq81IMKvNCAxIDIgM10KRiBbwq84IDRdCkYgW8KvOSA0IDkgwq82XQo=" rel="nofollow noreferrer">Try it online at the Uiua pad</a></p>
@@ -57,29 +75,11 @@
           permute⧻.  permutation of the input
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>225</s> <s>193</s> <s>192</s> 191 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>225</s> <s>193</s> <s>192</s> 191 bytes</h1>
 <p>Another brute-force solution, but in a language without a permutation builtin.</p>
 <pre><code>gniomh(l){s:=eas@mata(999)p:=0gniomh f(v,w,n,m){ma fad@v&lt;fad@l le i idir(0,fad@l){ma aimsigh@v(i)&lt;0{N:=l[i]f(v+[i],w+[N],n+N,uas(dearbh@mata(n+N),m))}}no ma m&lt;s{p=w s=m}}f([],[],0,0)toradh p}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgIDw-8aKCw" rel="nofollow noreferrer">Try on try-setanta.ie</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.jsoftware.com" rel="nofollow noreferrer">J</a>, <s>37</s> 31 bytes</h1>
-<pre><code>0{[:(/:[:&gt;./[:|+/\@|:)i.@!@#A.]
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m70wa8FOJT31NAVbKwV1BR0FAwUrINbVU3AO8nFbWlqSpmux36A62kpD3yrayk5PP9qqRls_xqHGSjNTz0HRQdlRLxai6qahJldqcka-QppCvKlCvImCoYKRgjFcyELBBM62VDBRsFSIN4NoXLAAQgMA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<pre><code>i.@!@#A.] NB. get the permutations:
-i.        NB. the range to
-  @!      NB. the factorial of
-    @#    NB. the length of the argument
-      A.] NB. select those permutations of the argument
-
-0{[:(/:[:&gt;./[:|+/\@|:) NB. reorder for smallest largest prefix sum:
-0{[:                   NB. first of
-    (/:           @|:) NB. sorting those by each's
-       [:&gt;./           NB. maximum
-            [:|        NB. absolute
-               +/\     NB. prefix sum
-</code></pre>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 93 bytes</h1>
 
