--- a/q/274596.html
+++ b/q/274596.html
@@ -26,13 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>054</td><td>Charcoal</td><td>240801T084735Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274612#274612">Neil</a></td></tr>
-<tr d-ix="1"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
-<tr d-ix="2"><td>051</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
+<tr d-ix="0"><td>051</td><td>Haskell + hgl</td><td>240801T025540Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274608#274608">Wheat Wi</a></td></tr>
+<tr d-ix="1"><td>054</td><td>Charcoal</td><td>240801T084735Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274612#274612">Neil</a></td></tr>
+<tr d-ix="2"><td>039</td><td>Retina 0.8.2</td><td>240731T235023Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274605#274605">Neil</a></td></tr>
 <tr d-ix="3"><td>075</td><td>Perl Mutf8 MUnicodeNormalize</td><td>240731T140151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274599#274599">鳴神裁四点一号</a></td></tr>
 <tr d-ix="4"><td>030</td><td>Jelly</td><td>240731T184150Z</td><td><a href="https://codegolf.stackexchange.com/questions/274596/is-this-a-valid-irish-word/274603#274603">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 54 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>78</s> <s>60</s> 51 bytes</h1>
+<pre><code>(ma.*pPX&quot;[ei][^aeiou]+[aou]&quot;~&lt;rv)&lt;rmD&lt;&lt;skX&quot;ae_&quot;&lt;mtL
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=ZY-9TsMwFEb3PMWVl7SFsCExpEyMCGVgqBSV6tLcxFbtuDgOlIUXYWkHhDowdWONxMzat6nz0waJ5drn-H6f5PdPjsWCpFzvf4RaamPhqUQpUkEJRIZkmZDXPUReEMCdtqBzQKvhlWxt7jlBqqXULyLPwO1KUpRbtELnBaAhKGrZVHrIfRjDwM3R9dAz6gb8alMrH_0Otw3SEb8aFEfcNaiP-N1g2eLK3VcfpU2Dq_1lOh4ovBgtowmLSUzjByShy-lZjG6yt9A8D0MXCsNiMWFIMxYqe9uFfxWK3JUl2gNQMxgsDYSQDh0BxMAkoeWYs4bPgSWExvJqIwzhnOPJS6R6z_YmrXaKozAn8Vhtsacsy5jXt8o_SUPCcllt-uQ_g9V2rnsiUh1N23-t1-15AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<h2>Explanation</h2>
+<p>This works by making some reductions on the input and then running a simple regex on both the string and its reverse.</p>
+<ul>
+<li><code>mtL</code> convert to lower case.</li>
+<li><code>skX&quot;ae_&quot;</code> replace <code>ae</code> with <code>a</code>.</li>
+<li><code>rmD</code> remove the síntí fada.</li>
+<li><code>~&lt;rv</code> on both the string and reverse ...</li>
+<li><code>pPX&quot;[ei][^aeiou]+[aou]&quot;</code> check if the pattern slender-cluster-broad occurs ...</li>
+<li><code>ma</code> get the logical or.</li>
+</ul>
+<h1>Reflection</h1>
+<ul>
+<li>There should be a version of <code>gkY</code> but for regexes.</li>
+<li>There should be <code>pPX</code> but not for regexes. That is combine <code>pP</code> with <code>ah'</code>.</li>
+<li>I could probably add a builtin for <code>&quot;aeiouáéíóú&quot;</code>.</li>
+<li>This regex reminds me of the regex used <a href="https://codegolf.stackexchange.com/a/270277/56656">here</a>. There might be a way to systematize this a bit to save bytes.</li>
+<li>Just has <code>xay</code> has a string version there should be a string version of <code>nxy</code>.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 54 bytes</h1>
 <pre><code>¹ＦＥＥ⪫⪪Ｓae¦a℅﹪℅↧ι¹³²⁻№]aouvι№eiι«Ｆ∧ι∧№υ⁰№υ±ι⎚Ｆ↔ι≔⟦⟧υ⊞υι
 </code></pre>
 <p><a href="https://tio.run/##PU9BasMwEDw3rxA@rUGFpj32FHxKqZNAjiWHja3aC0JrJG16KH1M39KHqZJcKlgNszszKw0z@oHRpnTy5CJs2@fNO3sFPS61XpgcnBdLEfZukXiOWTdBq1WDpqlQ7i7n4BCNh55HsQxHP5JDC6/8YfyAwQC1Wbd9emwL9uQkQMeSdzYXZLk1WlEJWluGKs9HfW7u6ot2bgTSqsAqEq0e/h2ZHMyEse4pts4a9JC/8@e@BrayjtUuBJocvF20kqI4SZhLAmXyldLVG4qz/flO9zf7Cw" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> for valid, nothing if not. Explanation:</p>
@@ -52,7 +75,7 @@
 </code></pre>
 <p>Save the type of this letter.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 39 bytes</h1>
 <pre><code>ae|[aáoóuú]
 #@
 [eéií]
@@ -75,29 +98,6 @@ i)1`(#|@)\w+\1
 </code></pre>
 <p>Check for consonants surrounded by vowels of different types (which equates to having surrounding symbols of the same type).</p>
 <p>Note that Retina defaults to the ISO-8859-1 code page so all of the Irish vowels only cost one byte.</p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a> + <a href="https://gitlab.com/wheatwizard/haskell-golfing-library" rel="nofollow noreferrer">hgl</a>, <s>78</s> <s>60</s> 51 bytes</h1>
-<pre><code>(ma.*pPX&quot;[ei][^aeiou]+[aou]&quot;~&lt;rv)&lt;rmD&lt;&lt;skX&quot;ae_&quot;&lt;mtL
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=ZY-9TsMwFEb3PMWVl7SFsCExpEyMCGVgqBSV6tLcxFbtuDgOlIUXYWkHhDowdWONxMzat6nz0waJ5drn-H6f5PdPjsWCpFzvf4RaamPhqUQpUkEJRIZkmZDXPUReEMCdtqBzQKvhlWxt7jlBqqXULyLPwO1KUpRbtELnBaAhKGrZVHrIfRjDwM3R9dAz6gb8alMrH_0Otw3SEb8aFEfcNaiP-N1g2eLK3VcfpU2Dq_1lOh4ovBgtowmLSUzjByShy-lZjG6yt9A8D0MXCsNiMWFIMxYqe9uFfxWK3JUl2gNQMxgsDYSQDh0BxMAkoeWYs4bPgSWExvJqIwzhnOPJS6R6z_YmrXaKozAn8Vhtsacsy5jXt8o_SUPCcllt-uQ_g9V2rnsiUh1N23-t1-15AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<h2>Explanation</h2>
-<p>This works by making some reductions on the input and then running a simple regex on both the string and its reverse.</p>
-<ul>
-<li><code>mtL</code> convert to lower case.</li>
-<li><code>skX&quot;ae_&quot;</code> replace <code>ae</code> with <code>a</code>.</li>
-<li><code>rmD</code> remove the síntí fada.</li>
-<li><code>~&lt;rv</code> on both the string and reverse ...</li>
-<li><code>pPX&quot;[ei][^aeiou]+[aou]&quot;</code> check if the pattern slender-cluster-broad occurs ...</li>
-<li><code>ma</code> get the logical or.</li>
-</ul>
-<h1>Reflection</h1>
-<ul>
-<li>There should be a version of <code>gkY</code> but for regexes.</li>
-<li>There should be <code>pPX</code> but not for regexes. That is combine <code>pP</code> with <code>ah'</code>.</li>
-<li>I could probably add a builtin for <code>&quot;aeiouáéíóú&quot;</code>. If it were 2 bytes or shorter it would save bytes in this solution.</li>
-<li>This regex reminds me of the regex used <a href="https://codegolf.stackexchange.com/a/270277/56656">here</a>. There might be a way to systematize this a bit to save bytes.</li>
-<li>Just has <code>xay</code> has a string version there should be a string version of <code>nxy</code>.</li>
-</ul>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.perl.org" rel="nofollow noreferrer">Perl</a> <code>-Mutf8</code> <code>-MUnicode::Normalize</code>, 75 bytes</h1>
 <p>Inverted truthy and falsey.</p>
