--- a/q/200807.html
+++ b/q/200807.html
@@ -35,18 +35,26 @@
 <tr d-ix="6"><td>nan</td><td>Jelly</td><td>200309T183826Z</td><td><a href="https://codegolf.stackexchange.com/questions/200807/as-close-to-flat-as-possible/200815#200815">Jonathan</a></td></tr>
 <tr d-ix="7"><td>nan</td><td>05AB1E</td><td>200309T172329Z</td><td><a href="https://codegolf.stackexchange.com/questions/200807/as-close-to-flat-as-possible/200809#200809">Grimmy</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 96 bytes - score 1/100,000</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 101 bytes - score <span class="math-container">\$10^{-1000}\$</span></h1>
 
 <pre class="lang-javascript prettyprint-override"><code>r=m=&gt;Math.random()*m|0
+f=x=&gt;x?r(10)|f(x-1):0
 k=0n
-while(r(1e5))k=k*10n+BigInt(r(10))
+while(f(1000))k++
 console.log((k%2n?-1n-k:k)/2n+'')
 </code></pre>
-<p><a href="https://tio.run/##FcixCsIwEADQPf8hvWtJTQouQhTcHPyI0IY2XnInadDFf4/4xvf0b7/PJb6qZllCa8Vld3n4uo3F8yIZsM9fo8gZVp8tpgAFbDghkqPeGh5ucb1z/a9BVLPwLimMSVYAOkx81ZY1nQmPEw9dh639AA" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##DclBDoMgEADAO/9o3C3BLh5N0Bf0EUShWnAxaFoO/p12rvO2H3tMed1PxWl2tWazmeFpz6XNlue0Ad63i4Q3xQxlzKAJLw9FaexJBEMsvssaHfj/ECEGKcWU@EjRtTG9AMKt41FpVqEP@OhYNg3W@gM" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Don't try it online!</a></p>
 <p>Explanation:</p>
-<p>While a number picked between 0 and 99,999 is not zero, add a single decimal digit to the output. When we're done, map the output (integer between 0 and +Infinity) to negative numbers as well.</p>
-<p>0 has the greatest probability of being picked with a probability of 1/100,000.</p>
-<p>I could improve the score a bit by increasing the constant 1e5 to say 1e15, but I wanted the TIO link to work and return a number in a reasonable amount of time, which it does.</p>
+<p>Don't try it online because it will time out. So this is a theoretically correct solution. If we replace the constant 1000 in the middle of the program with 5, then it will run fine in TIO.</p>
+<p>0 the highest probability which is <span class="math-container">\$10^{-1000}\$</span></p>
+<p>All other integers have progressively lower probabilities as they extend farther and farther away from 0.</p>
+<p>Commented:</p>
+<pre class="lang-javascript prettyprint-override"><code>r=m=&gt;Math.random()*m|0 //r(m) returns a random integer in the range [0,m-1]
+f=x=&gt;x?r(10)|f(x-1):0  //f(x) returns 0 with probability 1/(10^x)  
+k=0n                   //initialize k
+while(f(1000))k++      //call f(x) until it returns a zero. k keeps count of the number of calls.
+console.log((k%2n?-1n-k:k)/2n+'') //convert k from range [0,infinity] to [-infinity,infinity]
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1>Pyth, score of the order <span class="math-container">\$f_{\varphi(\omega,0)+1}(10^{10^{64}})^{-1}\$</span></h1>
 <pre><code>M,-.&lt;hG@H1.&lt;hH@G1+@G1@H1D%ZYI&lt;hZ0R,_hZ@Z1J,1 0V.&lt;1Y=J%gZJY)R,hJ+@J1YVC*GCG=T@%TT1)K0WOT=+K1)IO2K.?_K
