--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240802T053827Z
+"   /golfscore                                      20240802T062252Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/203062.html">Triangular code triangular output               : 0203062</a>
 <a href="q/200807.html">As close to flat as possible                    : 0200807</a>
 <a href="q/1364.html">Detect rotated strings                          : 0001364</a>
 <a href="q/248245.html">Make a list flat                                : 0248245</a>
