--- a/q/274532.html
+++ b/q/274532.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>028</td><td>PARI/GP</td><td>240801T020553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274607#274607">alephalp</a></td></tr>
-<tr d-ix="1"><td>063</td><td>Wolfram Language Mathematica</td><td>240802T012857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274629#274629">138 Aspe</a></td></tr>
+<tr d-ix="0"><td>6345</td><td>Wolfram Language Mathematica</td><td>240802T012857Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274629#274629">138 Aspe</a></td></tr>
+<tr d-ix="1"><td>028</td><td>PARI/GP</td><td>240801T020553Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274607#274607">alephalp</a></td></tr>
 <tr d-ix="2"><td>084</td><td>R</td><td>240801T191945Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274621#274621">int 21h </a></td></tr>
 <tr d-ix="3"><td>nan</td><td></td><td>240801T081931Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274611#274611">Sohang C</a></td></tr>
 <tr d-ix="4"><td>021</td><td>Kap</td><td>240801T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274613#274613">Elias M&</a></td></tr>
@@ -42,26 +42,11 @@
 <tr d-ix="13"><td>014</td><td>J</td><td>240729T005525Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274538#274538">Bubbler</a></td></tr>
 <tr d-ix="14"><td>024</td><td>K ngn/k</td><td>240729T004954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274532/rabinowitz-wagon-pi-formula/274537#274537">att</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 28 bytes</h1>
-<pre><code>n-&gt;(z=2)+sum(i=1,n,z/=2+1/i)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWe_J07TSqbI00tYtLczUybQ118nSq9G2NtA31MzUhSm6qpOUXaeQp2CoY6CgYWuooFBRl5pUABZQUdO2ARJpGnqYmVO2CBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>A port of <a href="https://codegolf.stackexchange.com/a/274550/9288">@G B's Ruby answer</a>.</p>
-<p><span class="math-container">\$0\$</span>-indexed. Returns a rational number.</p>
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <del>63</del> 45 bytes</h1>
+<p>Saved 18 bytes thanks to @att</p>
 <hr />
-<h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 43 bytes</h1>
-<pre><code>n-&gt;prod(i=0,n,[i+2*!i,!!i*k=2*i+1;0,k])[,2]
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGSNAVbhaWlJWm6Fje183TtCoryUzQybQ108nSiM7WNtBQzdRQVM7WybY20MrUNrQ10smM1o3WMYqFaVNLyizTygEYY6igYGegoFBRl5pUABZQUdO2ARJpGnqamJkTtggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p><span class="math-container">\$1\$</span>-indexed. Returns a column vector of numerator and denominator.</p>
-<p>Using the fact that composition of linear fractional transformations (<span class="math-container">\$x\mapsto\frac{ax+b}{cx+d}\$</span>) corresponds to matrix multiplication.</p>
-<p>The <span class="math-container">\$n\$</span>-th output is <span class="math-container">\$\begin{bmatrix}2&amp;0\\0&amp;1\end{bmatrix}\begin{bmatrix}1&amp;3\\0&amp;3\end{bmatrix}\cdots\begin{bmatrix}n&amp;2n+1\\0&amp;2n+1\end{bmatrix}\begin{bmatrix}0\\1\end{bmatrix}\$</span>.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 63 bytes</h1>
-<hr />
-<p>63 bytes, it can be golfed more.</p>
-<p>Golfed version. <a href="https://tio.run/##RY4xC8IwFIT3/IqjQtH6tE33OhVnB7eQoWqKhTaBNk4hv70@g@IbHsd3x3FT559m6vxw79YeDdazGx@qdZ5CqKmKFCqSMdK1u41GhWCptnuZcBKsLG2i1scUzFexLS7zYD24F7NZXqNf0LsZtpHwDnVV7MS3zRJ6ZXUkfKQkNqNGWUKgdSrVKMNBJbUmZDickBESqbX@4ZKZAN/f4MdOYEDgccjXNw" rel="nofollow noreferrer">Try it online!</a></p>
-<pre class="lang-mathematica prettyprint-override"><code>Fold[Dot,{{2,0},{0,1}},Table[{{n,2n+1},{0,2n+1}},{n,#}]].{0,1}&amp;
+<p>Golfed version. <a href="https://tio.run/##RYzNCsIwEITveYqhhaJ1tU3vlQp9AA/eQg5RWiz0B9J4kJBnj2tB3MMwfN8yk3HPbjJueJjYo0b0FcnQLq5pLtaat/I@JVNX6UEG8iWZEDJK9YmrDFkUu/xqh9mBV2C79TW6Ff1iMdcSbkFV5ntxM/exU34m9GrWgfCtklgGjaKAQLuobUZ1/Kik1oQExzMSwkYqrX@4YCbA9xccbDwDQsqTWfwA" rel="nofollow noreferrer">Try it online!</a></p>
+<pre class="lang-mathematica prettyprint-override"><code>{2,1}Dot@@Array[{{#,a=2#+1},{0,a}}&amp;,#].{0,1}&amp;
 </code></pre>
 <p>Ungolfed version. <a href="https://tio.run/##bZDNaoQwGEX3PsVlCmVqbUddFqZQKrPrz6K7EIp1klYwicQ4tEie3X4ahSl0I3gT7jk3qnRfQpWurspx3MaFkLUWoAwU2vob0liU@KxPQkPHV1GID8Y@M/3OcbfHMOgEOQCNa2Q@wZCe//so2saPRrW9C8WtNce@cjAyMCrRQVqjoPcZnIEiynLnRT4tN5gKsAgH0xxZYRxxhjxBugAJlOCt/GgEO1fkdEp6ynM@eTy0bfMzW9DOsllHEnXKTqJyNJfqMk8ScoX@Y8Nxu2Cn2ldbazdXWNH1jevmZ1v25Cl1BbNJRZKUD1YZvVPqOXY72lUYNtcwQRdZxsl8g5t7bBLMSc75Gu/@ZPSZVlKQ4ILaLsfxFw" rel="nofollow noreferrer">Try it online!</a></p>
 <pre class="lang-mathematica prettyprint-override"><code>(*Define the matrix for a given n*)
@@ -78,6 +63,21 @@ f[m_] := productOfMatrices[m] . {0, 1}
 Table[{n, f[n]}, {n, 1, 20}] // 
  Do[Print[ele[[1]], &quot; -&gt; &quot;, ele[[2]][[1]], &quot;/&quot;, ele[[2]][[2]]], {ele, #}] &amp;
 </code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 28 bytes</h1>
+<pre><code>n-&gt;(z=2)+sum(i=1,n,z/=2+1/i)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMHiNAXbpaUlaboWe_J07TSqbI00tYtLczUybQ118nSq9G2NtA31MzUhSm6qpOUXaeQp2CoY6CgYWuooFBRl5pUABZQUdO2ARJpGnqYmVO2CBRAaAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>A port of <a href="https://codegolf.stackexchange.com/a/274550/9288">@G B's Ruby answer</a>.</p>
+<p><span class="math-container">\$0\$</span>-indexed. Returns a rational number.</p>
+<hr />
+<h1><a href="https://pari.math.u-bordeaux.fr" rel="nofollow noreferrer">PARI/GP</a>, 43 bytes</h1>
+<pre><code>n-&gt;prod(i=0,n,[i+2*!i,!!i*k=2*i+1;0,k])[,2]
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m728ILEoMz69YMGSNAVbhaWlJWm6Fje183TtCoryUzQybQ108nSiM7WNtBQzdRQVM7WybY20MrUNrQ10smM1o3WMYqFaVNLyizTygEYY6igYGegoFBRl5pUABZQUdO2ARJpGnqamJkTtggUQGgA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><span class="math-container">\$1\$</span>-indexed. Returns a column vector of numerator and denominator.</p>
+<p>Using the fact that composition of linear fractional transformations (<span class="math-container">\$x\mapsto\frac{ax+b}{cx+d}\$</span>) corresponds to matrix multiplication.</p>
+<p>The <span class="math-container">\$n\$</span>-th output is <span class="math-container">\$\begin{bmatrix}2&amp;0\\0&amp;1\end{bmatrix}\begin{bmatrix}1&amp;3\\0&amp;3\end{bmatrix}\cdots\begin{bmatrix}n&amp;2n+1\\0&amp;2n+1\end{bmatrix}\begin{bmatrix}0\\1\end{bmatrix}\$</span>.</p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 84 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(n,m=0:n*2+1)cbind(Reduce(\(a,b)a*b+2*prod(1:((b-1)/2)),c(2,m),,,T)[-1],cumprod(m))
