--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240803T115418Z
+"   /golfscore                                      20240803T120233Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/249621.html">Add in the blanks                               : 0249621</a>
 <a href="q/97004.html">Does the code terminate?                        : 0097004</a>
 <a href="q/274209.html">Wait ASCII was 128 characters all along?        : 0274209</a>
 <a href="q/36639.html">The Symbols vs. The Letters                     : 0036639</a>
