--- a/q/97004.html
+++ b/q/97004.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>027</td><td>Python</td><td>240803T115418Z</td><td><a href="https://codegolf.stackexchange.com/questions/97004/does-the-code-terminate/274644#274644">Yto</a></td></tr>
+<tr d-ix="0"><td>027</td><td>Python</td><td>240803T115418Z</td><td><a href="https://codegolf.stackexchange.com/questions/97004/does-the-code-terminate/274644#274644">Rachelin</a></td></tr>
 <tr d-ix="1"><td>008</td><td>Vyxal</td><td>220118T220434Z</td><td><a href="https://codegolf.stackexchange.com/questions/97004/does-the-code-terminate/241320#241320">emanresu</a></td></tr>
 <tr d-ix="2"><td>013</td><td>Pyth</td><td>220118T215616Z</td><td><a href="https://codegolf.stackexchange.com/questions/97004/does-the-code-terminate/241319#241319">E. Z. L.</a></td></tr>
 <tr d-ix="3"><td>013</td><td>Pushy</td><td>191215T202317Z</td><td><a href="https://codegolf.stackexchange.com/questions/97004/does-the-code-terminate/197101#197101">FlipTack</a></td></tr>
@@ -62,6 +62,7 @@
 <pre><code>n=m=3
 while m:n^=m;m+=n%5-1
 </code></pre>
+<p><a href="https://tio.run/##K6gsycjPM/7/P88219aYqzwjMydVIdcqL8421zpX2zZP1VTX8P9/AA" rel="nofollow noreferrer">Try it online!</a></p>
 <p>This was inspired by the open problems that are common in small undecided Turing machines. I started from the <a href="https://wiki.bbchallenge.org/wiki/Hydra" rel="nofollow noreferrer">Hydra</a>, which can be done in 32 bytes:</p>
 <pre><code>n=m=3
 while m:n+=n&gt;&gt;1;m+=n%2*3-1
