--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240803T190942Z
+"   /golfscore                                      20240803T201650Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/110195.html">Shortest Code to Legitimately Slack Off         : 0110195</a>
 <a href="q/193502.html">Approximate the perfect fifth                   : 0193502</a>
 <a href="q/61781.html">Find the angle between two points               : 0061781</a>
 <a href="q/153161.html">Confusing Alphabet Staircase                    : 0153161</a>
